Closed
Bug 408323
Opened 18 years ago
Closed 17 years ago
Import of mail from Outlook 2003 fails completely
Categories
(Thunderbird :: Migration, defect, P3)
Tracking
(Not tracked)
VERIFIED
FIXED
Thunderbird 3.0b1
People
(Reporter: bbriley, Assigned: sivakrishna)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
3.85 KB,
patch
|
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.11) Gecko/20071127 Firefox/2.0.0.11
Build Identifier: Eudora 8.0.0b2
I used the <tools-import mail>, then in the next screen, selected Outlook, then <next> and the import started. I couldn't read anything that was in any of the folder. No messages were listed. Nor did the import program ask me which .pst file to import from (that is important, since I have several, only one of which was current).
Reproducible: Always
Steps to Reproduce:
1.See above
2.
3.
Actual Results:
The folders were imported, but the messages from Outlook 2003 were not imported successfully - none of them.
Expected Results:
The Outlook 2003 mail and folders would be successfully imported AFTER Eudora asks me which .pst file to import FROM.
?
Comment 1•18 years ago
|
||
It fails for me as well. Trying to 'Import Everything' crashes. Trying to import just the mail from Outlook fails to import any mail (though the fact that I do not have 'local folders', ie, just IMAP/MAPI might account for that). Unfortunately Outlook importing is a lower priority for us than importing from Eudora, so this will likely have to wait a while.
Would be interesting to know if you have the same problem importing using the latest Thunderbird as well.
Matt
Assignee: mozilla-bugs → gwenger
Priority: -- → P3
Target Milestone: --- → Future
Version: unspecified → Trunk
Updated•18 years ago
|
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Comment 2•18 years ago
|
||
Confirming the bug on Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9b5pre) Gecko/2008032302 Thunderbird/3.0a1pre ID:2008032302
Import everything crashes for me only if I select Outlook Express - bug 419597
I couldn't find version of this bug filed for Thunderbird so maybe it would be better to change the product ?
Comment 3•17 years ago
|
||
Changing product to Thunderbird, fix in Thunderbird would fix it also for the Penelope.
Severity: major → critical
Component: General → Migration
Product: Penelope → Thunderbird
QA Contact: general → migration
Target Milestone: Future → Thunderbird 3.0b1
Two issues identified.
1) 'pMsg' sent to nsOutlookCompose::SendTheMessage is modified locally only and changes do not reach nsOutlookMail::ImportMailbox.
2) 'destOutputStream' is created afresh for every mail => each mail overwrites previous mail.
Attached patch addressing these issues. Import from outlook 2007 works fine with it.
Attachment #344157 -
Flags: review?(neil)
Updated•17 years ago
|
Flags: blocking-thunderbird3? → blocking-thunderbird3+
QA Contact: migration → sivakrishna
Updated•17 years ago
|
Assignee: gwenger → sivakrishna
QA Contact: sivakrishna → migration
Comment 6•17 years ago
|
||
Comment on attachment 344157 [details] [diff] [review]
Fixes outlook mail import
> if (pListen->m_location) {
>- pListen->m_location->Clone(&pMsg);
>+ pListen->m_location->Clone(pMsg);
If only nsIMsgSendListener used an nsILocalFile instead of an nsIFile this could have been pMsg->InitWithLocalFile(pListen->m_location) to match the intent of the original nsFileSpec code. Oh well. Anyway, while you're here, can you fix the indentation on this line, it seems to be 12 spaces too many.
>- nsresult SendTheMessage( nsIFile *pMsg, nsMsgDeliverMode mode, nsCString &useThisCType);
>+ nsresult SendTheMessage( nsIFile **pMsg, nsMsgDeliverMode mode, nsCString &useThisCType);
Nit: I'd prefer if this out parameter was made the last parameter. (I don't need a new review for this change, you don't have sr yet anyway.)
>+ nsCOMPtr<nsIFile> compositionFile;
Nit: once space between > and c please. (I know, this is just moved code.)
Attachment #344157 -
Flags: review?(neil) → review+
Comment 7•17 years ago
|
||
Siva, could you please attach updated patch so it could be checked in (same with Bug 455229)
Updated•17 years ago
|
Keywords: regression
Updated patch with comments from Neil.
David, can you sr this?
Attachment #346009 -
Flags: superreview?(bienvenu)
Updated•17 years ago
|
Attachment #346009 -
Flags: superreview?(bienvenu) → superreview+
Comment 9•17 years ago
|
||
Comment on attachment 346009 [details] [diff] [review]
Changes as per comment #6
[Checkin: Comment 10]
thx for fixing this
Updated•17 years ago
|
Keywords: checkin-needed
Updated•17 years ago
|
Attachment #344157 -
Attachment is obsolete: true
Comment 10•17 years ago
|
||
Comment on attachment 346009 [details] [diff] [review]
Changes as per comment #6
[Checkin: Comment 10]
http://hg.mozilla.org/comm-central/rev/ed3b01f09992
NB: Please, attach Hg patch in the future.
Attachment #346009 -
Attachment description: Changes as per comment #6 → Changes as per comment #6
[Checkin: Comment 10]
Updated•17 years ago
|
Comment 11•17 years ago
|
||
Serge: could you also checkin patch from Bug 455229 ?
Thank you Siva for the patches!
-> VERIFIED
(the wizard is little buggy comparing to the 2.0 but with Outlook as default mail client it imports properly, will file follow-up bugs later on)
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9.1b2pre) Gecko/20081105 Lightning/1.0pre Shredder/3.0b1pre
Status: RESOLVED → VERIFIED
Comment 12•17 years ago
|
||
(In reply to comment #11)
> Serge: could you also checkin patch from Bug 455229 ?
This has not been requested there (yet).
You need to log in
before you can comment on or make changes to this bug.
Description
•