Bug 408323 - Import of mail from Outlook 2003 fails completely; r=neil sr=bienvenu